--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
     body { 
       font-family: 'Inter', sans-serif; 
       touch-action: pan-y; 
+      transition: background-color 0.3s ease;
+    }
+    body.dark {
+      --bg-primary: #111827;
+      --bg-secondary: #1f2937;
+      --text-primary: #f9fafb;
+      --text-secondary: #d1d5db;
+      --border-primary: #374151;
+    }
+    body:not(.dark) {
+      --bg-primary: #f9fafb;
+      --bg-secondary: #ffffff;
+      --text-primary: #111827;
+      --text-secondary: #4b5563;
+      --border-primary: #e5e7eb;
+    }
+    .dark .dropzone, 
+    .dark .style-btn, 
+    .dark .comparison-container, 
+    .dark .resolution-toggle,
+    .dark .usage-counter,
+    .dark #result,
+    .dark .style-grid button {
+      --tw-bg-opacity: 1;
+      background-color: rgba(31, 41, 54, var(--tw-bg-opacity));
+      border-color: #374151;
+      color: #f9fafb;
+    }
+    .dark .style-btn:hover,
+    .dark .style-btn.style-active {
+      background-color: #2563eb;
     }
     .dropzone { 
       border: 3px dashed #adb5bd; 
@@ -30,7 +61,7 @@
       animation: spin 1s linear infinite; 
     }
     .style-btn {
-      @apply px-3 py-1 text-xs font-medium rounded-full border border-gray-300 transition-all duration-200 cursor-pointer active:scale-95;
+      @apply px-3 py-1 text-xs font-medium rounded-full border border-gray-300 transition-all duration-200 cursor-pointer active:scale-95 relative;
     }
     .style-grid {
       display: grid;
@@ -56,6 +87,26 @@
     .toast.show {
       transform: translateX(0);
       opacity: 1;
+    }
+    .tooltip {
+      position: absolute;
+      bottom: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #1f2937;
+      color: white;
+      padding: 4px 8px;
+      border-radius: 4px;
+      font-size: 0.75rem;
+      white-space: nowrap;
+      z-index: 10;
+      opacity: 0;
+      visibility: hidden;
+      transition: all 0.2s ease;
+    }
+    .style-btn:hover .tooltip {
+      opacity: 1;
+      visibility: visible;
     }
     
     /* Enhanced Loading Screen */
@@ -210,12 +261,79 @@
       margin-top: 0.25rem;
       font-style: italic;
     }
+
+    /* History Panel */
+    .history-panel {
+      position: fixed;
+      top: 0;
+      right: -320px;
+      width: 300px;
+      height: 100%;
+      background: var(--bg-secondary);
+      border-left: 1px solid var(--border-primary);
+      box-shadow: -4px 0 6px -2px rgba(0,0,0,0.1);
+      z-index: 40;
+      transition: right 0.3s ease;
+      overflow-y: auto;
+      padding: 1rem;
+    }
+    .history-panel.open {
+      right: 0;
+    }
+    .history-item {
+      border: 1px solid var(--border-primary);
+      border-radius: 8px;
+      padding: 0.5rem;
+      margin-bottom: 0.5rem;
+      cursor: pointer;
+    }
+    .history-item img {
+      width: 100%;
+      border-radius: 4px;
+      margin-bottom: 0.25rem;
+    }
+    .history-prompt {
+      font-size: 0.75rem;
+      color: var(--text-secondary);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+    .close-history {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 1.5rem;
+      color: var(--text-secondary);
+      cursor: pointer;
+    }
+    .open-history {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 50px;
+      height: 50px;
+      background: #2563eb;
+      color: white;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1);
+      z-index: 30;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body class="bg-gray-50 min-h-screen flex items-center justify-center p-4 sm:p-6">
-  <div class="w-full max-w-2xl mx-auto bg-white rounded-2xl shadow-xl overflow-hidden">
+  <div class="w-full max-w-2xl mx-auto bg-white rounded-2xl shadow-xl overflow-hidden" id="appContainer">
     <div class="p-6 sm:p-8">
-      <h1 class="text-3xl font-bold text-center text-gray-800 mb-2">✨ Kamuy</h1>
+      <div class="flex justify-between items-center mb-6">
+        <h1 class="text-3xl font-bold text-center text-gray-800">✨ Kamuy</h1>
+        <button id="darkModeToggle" class="px-3 py-1 bg-gray-200 dark:bg-gray-700 rounded-lg text-sm">
+          Dark Mode
+        </button>
+      </div>
       <p class="text-center text-gray-600 mb-6">AI Image Editing, Powered by Qwen</p>
 
       <!-- Upload -->
@@ -249,16 +367,46 @@
       <div class="mb-6">
         <label class="block text-sm font-medium text-gray-700 mb-2">Style Presets</label>
         <div class="style-grid">
-          <button type="button" class="style-btn" onclick="toggleStyle(this, 'anime')">🎨 Anime</button>
-          <button type="button" class="style-btn" onclick="toggleStyle(this, 'studio ghibli')">🎬 Ghibli</button>
-          <button type="button" class="style-btn" onclick="toggleStyle(this, 'picasso')">🎨 Picasso</button>
-          <button type="button" class="style-btn" onclick="toggleStyle(this, 'cyberpunk')">🕹️ Cyberpunk</button>
-          <button type="button" class="style-btn" onclick="toggleStyle(this, 'van gogh')">🖼️ Van Gogh</button>
-          <button type="button" class="style-btn" onclick="toggleStyle(this, 'lego')">🧱 LEGO</button>
-          <button type="button" class="style-btn" onclick="toggleStyle(this, 'pixel art')">🎮 Pixel</button>
-          <button type="button" class="style-btn" onclick="toggleStyle(this, 'sketch')">🖋️ Sketch</button>
-          <button type="button" class="style-btn" onclick="toggleStyle(this, 'pixar')">🧸 Pixar</button>
-          <button type="button" class="style-btn" onclick="toggleStyle(this, 'desert mirage')">🏜️ Mirage</button>
+          <button type="button" class="style-btn" onclick="toggleStyle(this, 'anime')">
+            🎨 Anime
+            <span class="tooltip">Transform into vibrant anime style</span>
+          </button>
+          <button type="button" class="style-btn" onclick="toggleStyle(this, 'studio ghibli')">
+            🎬 Ghibli
+            <span class="tooltip">Studio Ghibli watercolor aesthetic</span>
+          </button>
+          <button type="button" class="style-btn" onclick="toggleStyle(this, 'picasso')">
+            🎨 Picasso
+            <span class="tooltip">Cubist abstraction and bold forms</span>
+          </button>
+          <button type="button" class="style-btn" onclick="toggleStyle(this, 'cyberpunk')">
+            🕹️ Cyberpunk
+            <span class="tooltip">Neon lights, rain, futuristic</span>
+          </button>
+          <button type="button" class="style-btn" onclick="toggleStyle(this, 'van gogh')">
+            🖼️ Van Gogh
+            <span class="tooltip">Expressive brushstrokes, textured</span>
+          </button>
+          <button type="button" class="style-btn" onclick="toggleStyle(this, 'lego')">
+            🧱 LEGO
+            <span class="tooltip">Plastic brick diorama style</span>
+          </button>
+          <button type="button" class="style-btn" onclick="toggleStyle(this, 'pixel art')">
+            🎮 Pixel
+            <span class="tooltip">16-bit retro video game style</span>
+          </button>
+          <button type="button" class="style-btn" onclick="toggleStyle(this, 'sketch')">
+            🖋️ Sketch
+            <span class="tooltip">Pencil drawing with shading</span>
+          </button>
+          <button type="button" class="style-btn" onclick="toggleStyle(this, 'pixar')">
+            🧸 Pixar
+            <span class="tooltip">3D animation, soft lighting</span>
+          </button>
+          <button type="button" class="style-btn" onclick="toggleStyle(this, 'desert mirage')">
+            🏜️ Mirage
+            <span class="tooltip">Heat haze, desert illusion</span>
+          </button>
         </div>
       </div>
 
@@ -309,6 +457,20 @@
   <!-- Toast Notification -->
   <div id="toast" class="toast">Image uploaded successfully</div>
 
+  <!-- History Panel -->
+  <div id="historyPanel" class="history-panel">
+    <h3 class="text-lg font-semibold mb-4 text-gray-800 dark:text-white">Recent Edits</h3>
+    <div id="historyList"></div>
+    <div class="close-history" id="closeHistory">&times;</div>
+  </div>
+
+  <!-- Open History Button -->
+  <div id="openHistory" class="open-history">
+    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+    </svg>
+  </div>
+
   <script>
     const selectedStyles = new Set();
     const promptInput = document.getElementById("prompt");
@@ -344,6 +506,17 @@
       { text: "Finalizing your masterpiece...", stage: 3 }
     ];
 
+    // Processing tips
+    const processingTips = [
+      "Did you know? You can combine styles for unique results!",
+      "Pro tip: Be specific in your prompt for better results.",
+      "Try using 'Pixar style' for fun character edits!",
+      "Editing text? Just describe what you want changed.",
+      "You can undo style selections by clicking again.",
+      "Large images may take a few extra seconds to process.",
+      "Use the slider to compare original vs edited precisely."
+    ];
+
     let currentStage = 0;
     let loadingInterval;
 
@@ -365,6 +538,10 @@
         if (currentStage < loadingStages.length - 1) {
           currentStage++;
           updateLoadingStage(currentStage);
+        } else {
+          // Rotate tips after all stages
+          const randomTip = processingTips[Math.floor(Math.random() * processingTips.length)];
+          loadingText.textContent = randomTip;
         }
       }, 1500);
     }
@@ -569,6 +746,99 @@
     const resultDiv = document.getElementById("result");
     const downloadBtn = document.getElementById("downloadBtn");
 
+    // === Dark Mode Toggle ===
+    const darkModeToggle = document.getElementById('darkModeToggle');
+    const appContainer = document.getElementById('appContainer');
+    const body = document.body;
+
+    // Check user preference
+    const prefersDark = localStorage.getItem('kamuy_dark_mode') === 'true';
+    if (prefersDark) {
+      body.classList.add('dark');
+      darkModeToggle.textContent = 'Light Mode';
+    }
+
+    darkModeToggle.addEventListener('click', () => {
+      body.classList.toggle('dark');
+      if (body.classList.contains('dark')) {
+        darkModeToggle.textContent = 'Light Mode';
+        localStorage.setItem('kamuy_dark_mode', 'true');
+      } else {
+        darkModeToggle.textContent = 'Dark Mode';
+        localStorage.setItem('kamuy_dark_mode', 'false');
+      }
+    });
+
+    // === History Panel ===
+    const historyPanel = document.getElementById('historyPanel');
+    const openHistory = document.getElementById('openHistory');
+    const closeHistory = document.getElementById('closeHistory');
+    const historyList = document.getElementById('historyList');
+
+    openHistory.addEventListener('click', () => {
+      historyPanel.classList.add('open');
+    });
+
+    closeHistory.addEventListener('click', () => {
+      historyPanel.classList.remove('open');
+    });
+
+    // Load history from localStorage
+    function loadHistory() {
+      const history = JSON.parse(localStorage.getItem('kamuy_edit_history') || '[]');
+      historyList.innerHTML = '';
+      if (history.length === 0) {
+        historyList.innerHTML = '<p class="text-sm text-gray-500">No edits yet</p>';
+      }
+      history.forEach((item, index) => {
+        const div = document.createElement('div');
+        div.className = 'history-item';
+        div.innerHTML = `
+          <img src="${item.thumbnail}" alt="Edit" />
+          <div class="history-prompt">${item.prompt}</div>
+          <small class="text-xs text-gray-500">${new Date(item.date).toLocaleString()}</small>
+        `;
+        div.onclick = () => {
+          beforeImage.src = item.original;
+          afterImage.src = item.edited;
+          resultDiv.classList.remove('hidden');
+          historyPanel.classList.remove('open');
+          showToast("Loaded from history!");
+        };
+        historyList.appendChild(div);
+      });
+    }
+
+    // Save to history
+    function saveToHistory(original, edited, prompt) {
+      const history = JSON.parse(localStorage.getItem('kamuy_edit_history') || '[]');
+      const canvas = document.createElement('canvas');
+      const img = new Image();
+      img.onload = () => {
+        canvas.width = 100;
+        canvas.height = 100;
+        const ctx = canvas.getContext('2d');
+        ctx.drawImage(img, 0, 0, 100, 100);
+        const thumbnail = canvas.toDataURL('image/jpeg', 0.7);
+
+        const newItem = {
+          original,
+          edited,
+          thumbnail,
+          prompt,
+          date: new Date().toISOString()
+        };
+        history.unshift(newItem);
+        // Keep only last 5
+        localStorage.setItem('kamuy_edit_history', JSON.stringify(history.slice(0, 5)));
+        loadHistory();
+      };
+      img.src = edited;
+    }
+
+    // Initialize history
+    loadHistory();
+
     editBtn.addEventListener("click", async () => {
       const imageFile = imageInput.files[0];
       const prompt = document.getElementById("prompt").value.trim();
@@ -610,7 +880,8 @@
         const data = await response.json();
 
         if (data.edited_image_url) {
-          beforeImage.src = URL.createObjectURL(imageFile);
+          const originalUrl = URL.createObjectURL(imageFile);
+          beforeImage.src = originalUrl;
           afterImage.src = data.edited_image_url;
           
           resultDiv.classList.remove("hidden");
@@ -637,6 +908,9 @@
               })
               .catch(err => alert("Download failed: " + err.message));
           };
+
+          // Save to history
+          saveToHistory(originalUrl, data.edited_image_url, finalPrompt);
 
           showToast("Edit completed! 🎉");
         } else {
